--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "site"]
 	path = site
 	url = git@github.com:GillyRabutTsurwa/gilbertrabuttsurwa_production.git
-[submodule "github"]
-	path = github
-	url = git@github.com:GillyRabutTsurwa/gilbertrabuttsurwa_production.git
+[submodule "frontend"]
+	path = frontend
+	url = git@github.com:GillyRabutTsurwa/gilbertrabuttsurwa__frontend.git
+[submodule "content"]
+	path = content
+	url = git@github.com:GillyRabutTsurwa/gilbertrabuttsurwa__content.git
