--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "site"]
 	path = site
 	url = git@github.com:GillyRabutTsurwa/gilbertrabuttsurwa_site.git
+[submodule "content"]
+	path = content
+	url = git@github.com:GillyRabutTsurwa/gilbertrabuttsurwa_content.git
